@@ -90,6 +90,7 @@ int md_reg_do(md_reg_do_cb *cb, void *baton, md_reg_t *reg, apr_pool_t *p);
 #define MD_UPD_AGREEMENT    0x0020
 #define MD_UPD_CERT_URL     0x0040
 #define MD_UPD_DRIVE_MODE   0x0080
+#define MD_UPD_RENEW_WINDOW 0x0100
 #define MD_UPD_ALL          0x7FFF
 
 /**
