@@ -1,3 +1,4 @@
+ * MDRenewWindow parsing fixed and setting/update in store added, testcases
  * Challenge data is being removed from store when staging is done
  * configure option '--with-boulder=<url>' to specify the URL of the boulder test host (defaults
    to localhost:4000)
